--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,8 @@
-// TODO
+.headerContainer {
+    height: 8rem;
+    max-width: 700px;
+    padding-top: 5rem;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+}
