--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,59 @@
-// TODO
+.postContent {
+    h1 {
+        font-size: 3rem;
+        margin-bottom: 1.5rem;
+        color: var(--heading);
+    }
+    .postInfo {
+        font-size: 0.87rem;
+        color: var(--info);
+
+        time, span {
+            margin-right: 1.2rem;
+            
+            svg {
+                height: 18px;
+                width: 18px;
+                margin-right: 0.6rem;
+            }
+        }
+    }
+
+    article {
+        h2 {
+            font-size: 2rem;
+            color: var(--heading);
+            margin-bottom: 4rem;
+        }
+        p, span, ul {
+            font-size: 1.25rem;
+            color: var(--body);
+            line-height: 140%;
+            margin: 1.8rem 0;
+        }
+        a {
+            color: var(--highlight);
+            
+            &:hover{
+                text-decoration: underline;
+            }
+        }
+
+        strong {
+            font-size: 700;
+        }
+
+        ul {
+            padding-left: 1.5rem;
+            li {
+                margin: 0.5rem 0;
+            }
+        }
+    }
+}
+
+.banner {
+    display: block;
+    width: 1440px;
+    margin: 4rem auto;
+}
